# PaddleOCR

deploy/cpp_infer/: CMakeLists.txt
